JETTY https, ssl IMPLEMENTATION + startup.sh