@@ -2,9 +2,12 @@ ARG BASE_IMAGE="allfab/gdal-ecw:latest"
 
 FROM $BASE_IMAGE AS builder
 
+# BUILD ARGUMENTS
 ARG DEBIAN_FRONTEND="noninteractive"
 ARG BUILD_DATE
 ARG GS_VERSION=2.26.2
+ARG COMMUNITY_PLUGIN_URL=''
+ARG STABLE_PLUGIN_URL=https://downloads.sourceforge.net/project/geoserver/GeoServer/${GS_VERSION}/extensions
 
 LABEL \
   maintainer="Allfab <allfab@gmail.com>" \
@@ -25,21 +28,26 @@ ENV JETTY_HOME=/srv/jetty
 ENV JETTY_BASE=/srv/jetty/geoserver-base
 
 # SET EXTERNALIZATIONS
-ENV GEOSERVER_HOME="/app/geoserver"
-ENV GEOSERVER_DATA_DIR="$GEOSERVER_HOME/config"
-ENV GEOSERVER_GEODATA_DIR="$GEOSERVER_HOME/data"
-ENV GEOSERVER_GEODATA_DIR_RASTER="$GEOSERVER_HOME/data/raster"
-ENV GEOSERVER_GEODATA_DIR_VECTOR="$GEOSERVER_HOME/data/vector"
-ENV GEOSERVER_LOG_DIR="$GEOSERVER_HOME/logs"
+ENV GEOSERVER_HOME="/app/geoserver/"
+ENV GEOSERVER_DATA_DIR="$GEOSERVER_HOME/config/"
+ENV GEOSERVER_GEODATA_DIR="$GEOSERVER_HOME/data/"
+ENV GEOSERVER_GEODATA_DIR_RASTER="$GEOSERVER_HOME/data/raste/r"
+ENV GEOSERVER_GEODATA_DIR_VECTOR="$GEOSERVER_HOME/data/vector/"
+ENV GEOSERVER_LOG_DIR="$GEOSERVER_HOME/logs/"
 ENV GEOSERVER_LOG_LOCATION="$GEOSERVER_LOG_DIR/geoserver.log"
-ENV GEOWEBCACHE_CONFIG_DIR="$GEOSERVER_HOME/gwc/config"
-ENV GEOWEBCACHE_CACHE_DIR="$GEOSERVER_HOME/gwc/cache"
+ENV GEOWEBCACHE_CONFIG_DIR="$GEOSERVER_HOME/gwc/config/"
+ENV GEOWEBCACHE_CACHE_DIR="$GEOSERVER_HOME/gwc/cache/"
 ENV GEOSERVER_JAVA_KEYSTORE="$JETTY_BASE/etc"
+ENV GEOSERVER_LIB_DIR=$JETTY_BASE/webapps/geoserver/WEB-INF/lib/
+ENV ADDITIONAL_EXTENSIONS_PATH="$GEOSERVER_HOME/additional_extensions/"
 ENV INITIAL_MEMORY="2G"
 ENV MAXIMUM_MEMORY="4G"
 ENV JAIEXT_ENABLED="true"
 ENV GEOSERVER_CSRF_WHITELIST=""
 ENV GEOSERVER_CSRF_DISABLED=false
+ENV STABLE_EXTENSIONS=''
+ENV STABLE_PLUGIN_URL=$STABLE_PLUGIN_URL
+ENV COMMUNITY_EXTENSIONS=''
 
 ENV HTTPS_ENABLED=false
 ENV HTTPS_PORT=8443
@@ -61,12 +69,25 @@ ENV GEOSERVER_OPTS=" \
 
 # SET JAVA CONFIGURATION
 ENV JAVA_OPTIONS=" \
-  -Xms$INITIAL_MEMORY \
-  -Xmx$MAXIMUM_MEMORY \
+  --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+  --add-opens=java.base/java.text=ALL-UNNAMED \
+  --add-opens=java.desktop/java.awt.font=ALL-UNNAMED \
+  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED \
+  --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED \
+  --add-opens=java.desktop/sun.java2d.pipe=ALL-UNNAMED \
   -Djava.awt.headless=true -server \
-  -Dfile.encoding=UTF8 \
+  -Dfile.encoding=UTF-8 \
   -Djavax.servlet.request.encoding=UTF-8 \
   -Djavax.servlet.response.encoding=UTF-8 \
+  -D-XX:SoftRefLRUPolicyMSPerMB=36000 \
+  -Xbootclasspath/a:$JETTY_BASE/lib/marlin.jar \
+  -Dsun.java2d.renderer=sun.java2d.marlin.DMarlinRenderingEngine \
+  -Dorg.geotools.coverage.jaiext.enabled=true \
+  -Xms$INITIAL_MEMORY \
+  -Xmx$MAXIMUM_MEMORY \
   -XX:SoftRefLRUPolicyMSPerMB=36000 \
   -XX:+UseG1GC \
   -XX:MaxGCPauseMillis=200 \
@@ -76,6 +97,8 @@ ENV JAVA_OPTIONS=" \
   -Djava.library.path=/usr/local/lib:/usr/local/hexagon:/usr/local/hexagon/lib/x64/release \  
   -DLD_LIBRARY_PATH=/usr/local/lib:/usr/local/hexagon:/usr/local/hexagon/lib/x64/release \
   $GEOSERVER_OPTS"
+
+ 
 
 USER root
 
@@ -101,6 +124,7 @@ RUN mkdir -p \
     $GEOSERVER_LOG_DIR  \
     $GEOWEBCACHE_CONFIG_DIR \
     $GEOWEBCACHE_CACHE_DIR \
+    $ADDITIONAL_EXTENSIONS_PATH \
     && chown -Rf jetty:jetty $GEOSERVER_HOME
 
 VOLUME $GEOSERVER_DATA_DIR
@@ -110,6 +134,7 @@ VOLUME $GEOSERVER_LOG_DIR
 VOLUME $GEOWEBCACHE_CONFIG_DIR
 VOLUME $GEOWEBCACHE_CACHE_DIR
 VOLUME $GEOSERVER_JAVA_KEYSTORE
+VOLUME $ADDITIONAL_EXTENSIONS_PATH
 
 # PREREQUISITE + PERMISSIONS
 WORKDIR $JETTY_HOME
@@ -128,18 +153,19 @@ RUN wget --progress=dot:giga https://repo1.maven.org/maven2/org/eclipse/jetty/je
 
 # INSTALL GEOSERVER
 WORKDIR $JETTY_BASE/webapps
-RUN wget --progress=dot:mega https://kumisystems.dl.sourceforge.net/project/geoserver/GeoServer/$GEOSERVER_VERSION/geoserver-$GEOSERVER_VERSION-war.zip \
+RUN wget --progress=dot:giga https://kumisystems.dl.sourceforge.net/project/geoserver/GeoServer/$GEOSERVER_VERSION/geoserver-$GEOSERVER_VERSION-war.zip \
     && unzip geoserver-$GEOSERVER_VERSION-war.zip \
     && unzip geoserver.war -d geoserver \
     && rm -Rf README.html geoserver-$GEOSERVER_VERSION-war.zip license target geoserver.war \
     && chown -R jetty:jetty $JETTY_BASE
 
-# GDAL NATIVE LIB
+# GDAL NATIVE LIB + ADDITIONAL GEOSERVER EXTENSIONS
 RUN cp -f /opt/gdal-$GDAL_VERSION/java/gdal-$GDAL_VERSION.jar $JETTY_BASE/webapps/geoserver/WEB-INF/lib
+# COPY ./geoserver/additional_extensions $GEOSERVER_LIB_DIR
 
 # GDAL GEOSERVER EXT LIB
 WORKDIR /tmp/downloads
-RUN wget --progress=dot:mega https://deac-fra.dl.sourceforge.net/project/geoserver/GeoServer/$GEOSERVER_VERSION/extensions/geoserver-$GEOSERVER_VERSION-gdal-plugin.zip \
+RUN wget --progress=dot:giga https://deac-fra.dl.sourceforge.net/project/geoserver/GeoServer/$GEOSERVER_VERSION/extensions/geoserver-$GEOSERVER_VERSION-gdal-plugin.zip \
     && unzip geoserver-$GEOSERVER_VERSION-gdal-plugin.zip -d geoserver-$GEOSERVER_VERSION-gdal-plugin \
     && cd geoserver-$GEOSERVER_VERSION-gdal-plugin \
     && cp -f imageio-ext-* $JETTY_BASE/webapps/geoserver/WEB-INF/lib \
@@ -154,7 +180,9 @@ WORKDIR $JETTY_BASE
 COPY jetty/start.d /tmp/jetty/start.d
 COPY *.sh /app/
 
-RUN chmod +x /app/*.sh && sed -i 's/\r$//' /app/startup.sh
+RUN chmod +x /app/startup.sh && sed -i 's/\r$//' /app/startup.sh \
+  && chmod +x /app/update-credentials.sh && sed -i 's/\r$//' /app/update-credentials.sh \
+  && chmod +x /app/install-extensions.sh && sed -i 's/\r$//' /app/install-extensions.sh
 
 USER jetty
 ENTRYPOINT ["bash", "/app/startup.sh"]
